--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </p>
 
     <div style="margin:30px 0;">
-      <h2 style="color:#0066cc;">Pilih Platform Resmi PK95 Sesuai Dengan Jaringan Anda:</h2>
+      <h2 style="color:#0066cc;">Dua situs resmi yang dikelola langsung oleh perusahaan, menjamin kredibilitas tinggi dan kekuatan operasional yang luar biasa:</h2>
       <p><a href="https://pk95vip.vip/" target="_blank" style="color:#0066cc; text-decoration:underline;">PK95VIP - Situs Resmi</a></p>
       <p><a href="https://pk95b.com/" target="_blank" style="color:#0066cc; text-decoration:underline;">PK95 - Situs Resmi</a></p>
       <p style="font-size:16px; color:#555;">Sesuaikan Pilihan Anda dengan Target Pasar atau Jaringan Anda!</p>
