--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 
     <h1 style="color:#ff6600;">Bergabunglah Menjadi Mitra Resmi PK95 Hari Ini!</h1>
 
-    <p style="font-size:18px; color:#333; margin-top:20px;">
+    <div style="margin-top:20px;">
+      <h2 style="color:#0066cc;">Hubungi Customer Service Resmi:</h2>
+      <p><a href="https://wa.me/6282124809124" target="_blank" style="display:inline-block; margin:8px 0; padding:10px 20px; background:#28a745; color:white; border-radius:5px; text-decoration:none;">Customer Service 1</a></p>
+      <p><a href="https://wa.me/6287822482955" target="_blank" style="display:inline-block; margin:8px 0; padding:10px 20px; background:#007bff; color:white; border-radius:5px; text-decoration:none;">Customer Service 2</a></p>
+      <p><a href="https://wa.me/855962437202" target="_blank" style="display:inline-block; margin:8px 0; padding:10px 20px; background:#17a2b8; color:white; border-radius:5px; text-decoration:none;">Customer Service 3</a></p>
+    </div>
+
+    <p style="font-size:18px; color:#333; margin-top:30px;">
       💼 Dapatkan Komisi Agen Mulai dari <b>25%</b> Hingga <b>50%</b>!
     </p>
     <p style="font-size:18px; color:#333;">
@@ -26,22 +33,14 @@
     </p>
 
     <div style="margin:30px 0;">
-      <h2 style="color:#0066cc;">Dua situs resmi yang dikelola langsung oleh perusahaan, menjamin kredibilitas tinggi dan kekuatan operasional yang luar biasa:</h2>
+      <h2 style="color:#0066cc;">Pilih Platform Resmi PK95 Sesuai Dengan Jaringan Anda:</h2>
       <p><a href="https://pk95vip.vip/" target="_blank" style="color:#0066cc; text-decoration:underline;">PK95VIP - Situs Resmi</a></p>
       <p><a href="https://pk95b.com/" target="_blank" style="color:#0066cc; text-decoration:underline;">PK95 - Situs Resmi</a></p>
       <p style="font-size:16px; color:#555;">Sesuaikan Pilihan Anda dengan Target Pasar atau Jaringan Anda!</p>
-    </div>
-
-    <div style="margin-top:30px;">
-      <h2 style="color:#ff6600;">Hubungi Customer Service Resmi Kami:</h2>
-      <button onclick="window.location.href='https://wa.me/6282124809124'" style="margin:10px; padding:15px 30px; background:#28a745; color:white; border:none; border-radius:5px; font-size:16px;">Hubungi Layanan Pelanggan 1</button>
-      <br>
-      <button onclick="window.location.href='https://wa.me/6287822482955'" style="margin:10px; padding:15px 30px; background:#007bff; color:white; border:none; border-radius:5px; font-size:16px;">Hubungi Layanan Pelanggan 2</button>
-      <br>
-      <button onclick="window.location.href='https://wa.me/855962437202'" style="margin:10px; padding:15px 30px; background:#17a2b8; color:white; border:none; border-radius:5px; font-size:16px;">Hubungi Layanan Pelanggan 3</button>
     </div>
 
   </div>
 
 </body>
 </html>
+
